refactor:  cambia criterio generazione openapi basandolo sui tag
